# xyo-sdk-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conanfile.py
.github/workflows/: ci.yml  release.yml
cmake/: XYOSDKConfig.cmake.in
docs/: mascot_generation_instructions.md
example/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
include/xyo/: client.hpp
packaging/vcpkg/: portfile.cmake  vcpkg.json
src/: client.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: client_test.cpp
